# qemu-demo

./: .gitignore  DOCKER_USAGE.md  Dockerfile  NEXT_STEPS.md  PICO_DEV_GUIDE.md  QUICKSTART.md  README.md  SUMMARY.md  docker-compose.yml  qemu-arm-cortex-m-architecture-analysis.md  qemu-rp2040-build-integration.md  rp2040-implementation-example.c  rp2040-peripheral-patterns.h
.github/workflows/: docker-build.yml  pico-firmware-ci.yml
hw/: Kconfig
hw/arm/: Kconfig  meson.build  raspberrypi-pico.c  rp2040.c
hw/char/: meson.build  rp2040_uart.c
hw/gpio/: meson.build  rp2040_gpio.c
hw/timer/: meson.build  rp2040_timer.c
include/hw/arm/: rp2040.h
include/hw/char/: rp2040_uart.h
include/hw/gpio/: rp2040_gpio.h
include/hw/timer/: rp2040_timer.h
pico-dev/: .gitignore  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml
pico-dev/examples/blinky/: CMakeLists.txt  blinky.c
pico-dev/scripts/: build.sh  ci-local.sh  test.sh
scripts/: docker-run.sh
tests/rp2040/: Makefile  link.ld  test_gpio.c  test_timer.c  test_uart.c
workspace/: .gitkeep
